--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "sv_extractor"
-version = "0.1.1"
+version = "0.2.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -10,3 +10,4 @@ serde_json = "1.0"
 thiserror = "1.0.37"
 clap = { version = "4.0.26", features = ["derive"] }
 serde = { version = "1.0.147", features = ["derive"] }
+ooz-sys = "0.2.0"
