--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,12 @@
 [package]
 name = "sv_extractor"
-version = "0.2.0"
+version = "0.3.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-serde_json = "1.0"
 thiserror = "1.0.37"
 clap = { version = "4.0.26", features = ["derive"] }
-serde = { version = "1.0.147", features = ["derive"] }
 ooz-sys = "0.2.0"
+flatbuffers = "22.10.26"
