--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-thiserror = "1.0.37"
-clap = { version = "4.0.26", features = ["derive"] }
 ooz-sys = "0.2.0"
+serde = "1.0.148"
+thiserror = "1.0.37"
+serde_json = "1.0.89"
 flatbuffers = "22.10.26"
+clap = { version = "4.0.26", features = ["derive"] }
